style(breadcrumb): change position from sticky to fixed
Modify the breadcrumb's position to fixed and adjust the top value to 11% to improve layout consistency and avoid overlap with other elements.

--- a/assets/css/breadcrumb.css
+++ b/assets/css/breadcrumb.css
@@ -1,7 +1,7 @@
 /* Stili per la breadcrumb */
 nav[aria-label="breadcrumb"] {
-    position: sticky;
-    top: 0;
+    position: fixed;
+    top: 11%;
     z-index: 90; /* Valore inferiore rispetto al menu (z-index: 100) */
     background-color: var(--background-secondary);
     padding: 0px 0px 10px 0px;
